# qubalab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  test.py
.github/workflows/: docs.yml  publish-release.yml  publish-test.yml  tests.yml
notebooks/: Exploring images.ipynb  Exploring objects.ipynb  communicating_with_qupath.ipynb  opening_images.ipynb  working_with_objects.ipynb
qubalab/display/: __init__.py  plot.py  plots.py
qubalab/images/: __init__.py  aicsimageio.py  aicsimageio_server.py  bioio_server.py  icc_profile_server.py  image_server.py  image_server_metadata.py  image_shape.py  imageio.py  labeled_server.py  openslide.py  openslide_server.py  pixel_calibration.py  pyramid.py  pyramid_store.py  qupath_server.py  raster.py  region_2d.py  servers.py  utils.py  wrapped_image_server.py
qubalab/images/metadata/: __init__.py  image_channel.py  image_metadata.py  image_server_metadata.py  image_shape.py  pixel_calibration.py  region_2d.py
qubalab/objects/: __init__.py  classification.py  draw.py  geojson.py  geometries.py  geometry.py  image_feature.py  object_type.py  objects.py  rois.py  types.py  utils.py
qubalab/qupath/: __init__.py  py4j.py  qupath_gateway.py
qubalab/tests/: test_images.py
qupyth/images/: __init__.py  imageio.py  openslide.py  pyramid.py  servers.py
qupyth/qupath/: py4j.py
qupyth/tests/: test_images.py
tests/: test_aicsimageio_server.py  test_icc_profile_image_server.py  test_image_server.py  test_image_server_metadata.py  test_image_shape.py  test_images.py  test_openslide_server.py  test_pixel_calibration.py  test_pyramid_store.py  test_region_2d.py  test_wrapped_image_server.py
tests/images/: test_aicsimageio_server.py  test_bioio_server.py  test_icc_profile_image_server.py  test_image_server.py  test_labeled_server.py  test_openslide_server.py  test_qupath_server.py  test_region_2d.py  test_utils.py  test_wrapped_image_server.py
tests/images/metadata/: test_image_metadata.py  test_image_server_metadata.py  test_image_shape.py  test_pixel_calibration.py
tests/metadata/: test_image_server_metadata.py  test_region_2d.py
tests/objects/: test_classification.py  test_draw.py  test_geojson.py  test_geometry.py  test_image_feature.py
tests/res/: multi_resolution_rgb.py  multi_resolution_uint8_3channels.py  single_resolution_float_5d.py  single_resolution_float_5d_zarr.py  single_resolution_rgb_image.py
