[tool.poetry]
name = "qubalab"
version = "0.0.1.dev0"
description = "A laboratory for exploring quantitative bioimage analysis in Python"
authors = ["Pete Bankhead", "Alan O'Callaghan"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://qupath.github.io/"
repository = "https://github.com/qupath/qubalab"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pillow = "^10.3.0"
zarr = "^2.18.2"
dask = {extras = ["array"], version = "^2024.5.2"}
openslide-python = {version = "^1.3.1", optional = true, extras = ["openslide"]}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
tifffile = "^2024.5.22"

[tool.poetry.extras]
openslide = ["openslide-python"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
