[tool.poetry]
name = "qubalab"
version = "0.0.1"
description = "A laboratory for exploring quantitative bioimage analysis in Python"
authors = ["Pete Bankhead", "Alan O'Callaghan", "Léo Leplat"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://qupath.github.io/"
repository = "https://github.com/qupath/qubalab"

[tool.poetry.dependencies]
python = "^3.10"
tiffslide = "^2.1.2"
aicsimageio = "^4.11.0"
openslide-python = {version = "^1.2.0", markers = "extra == 'openslide' or extra == 'all'", optional = true}
dask-image = "^2024.5.3"
py4j = "^0.10.9.7"
geojson = "^3.1.0"
shapely = "^2.0.4"
rasterio = "^1.3.10"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.5"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.extras]
openslide = ["openslide-python"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
