[metadata]
name = qubalab
version = 0.1.0
description = A laboratory for exploring quantitative bioimage analysis in Python
author = "Pete Bankhead, Alan O'Callaghan, Léo Leplat"
license = Apache-2.0
long_description = file: README.md
project_urls = {"homepage" = "https://qupath.github.io/", "repository" = "https://github.com/qupath/qubalab"}

[options]
packages =
    qubalab
    qubalab.display
    qubalab.images
    qubalab.images.metadata
    qubalab.objects
    qubalab.qupath
python_requires = >= 3.10
install_requires =
    tiffslide ~= 2.1.2
    aicsimageio ~= 4.11.0
    dask-image ~= 2024.5.3
    py4j ~= 0.10.9.7
    geojson ~= 3.1.0
    shapely ~= 2.0.4
    rasterio ~= 1.3.10
    matplotlib ~= 3.9.0


[options.extras_require]
dev =
    jupyter ~= 1.0.0
test =
    pytest ~= 8.2.2
openslide =
    openslide-python ~= 1.2.0
doc =
    sphinx ~= 7.4.5
    sphinx-rtd-theme ~= 2.0.0
