[metadata]
name = qubalab
version = 0.1.2
description = A laboratory for exploring quantitative bioimage analysis in Python
author = Pete Bankhead, Alan O'Callaghan, Léo Leplat
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    homepage = https://qupath.github.io/qubalab-docs/
    repository = https://github.com/qupath/qubalab

[options]
packages =
    qubalab
    qubalab.display
    qubalab.images
    qubalab.images.metadata
    qubalab.objects
    qubalab.qupath
python_requires = >= 3.11
install_requires =
    bioio ~= 3.0.0
    bioio-ome-zarr ~= 2.3.0
    bioio-ome-tiff ~= 1.4.0
    tifffile >= 2025.5.21
    tiffslide >= 2.4.0
    dask-image >= 0.6.0
    py4j ~= 0.10.9.7
    geojson ~= 3.1.0
    shapely ~= 2.0.4
    rasterio ~= 1.3.10
    matplotlib ~= 3.9.0
    openslide-python ~= 1.4.0
    openslide-bin ~=4.0.0


[options.extras_require]
dev =
    jupyter ~= 1.0.0
test =
    pytest ~= 8.2.2
    pytest-html ~= 4.1.1
    coverage ~= 7.6.5
    genbadge[all] ~= 1.1.1
doc =
    sphinx ~= 7.4.5
    sphinx-rtd-theme ~= 2.0.0
